[package]
name = "amethyst_physics"
version = "0.2.1"
authors = ["Andrea Catania <info@andreacatania.com>"]
edition = "2018"
repository = "https://github.com/AndreaCatania/amethyst_physics"
description = "The Amethyst Physics engine interface."
keywords = ["physics", "dynamics", "game", "amethyst"]
categories = ["science", "game-engines", "simulation", "games"]
readme = "README.md"
license = "MIT"

[dependencies]
amethyst_core = "0.15.3"
amethyst_error = "0.15.3"
log = "0.4.6"
